# agent-toolkit

./: .gitignore  .mcp.json  README.md  file.txt
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
docs/: conventions.md  resource-template.md
mcps/ssh-mcp/: .mcp.json  README.md  metadata.yaml
skills/agent-config-sync/: .gitignore  README.md  SKILL.md  metadata.yaml  pyproject.toml
skills/agent-config-sync/agents/: openai.yaml
skills/agent-config-sync/assets/: agent-config.example.yaml
skills/agent-config-sync/assets/ui/: app.js  index.html  styles.css
skills/agent-config-sync/references/: claude-settings.md  codex-config.md  declaration-format.md  importing.md  merge-rules.md  troubleshooting.md  ui.md
skills/agent-config-sync/scripts/: aiconfig.py
skills/agent-config-sync/src/aiconfig/: cli.py  detect.py  differ.py  docs.py  importer.py  loader.py  matcher.py  merger.py  state.py  webui.py  writer.py
skills/agent-config-sync/tests/: test_docs.py  test_importer.py  test_matcher.py  test_render_claude.py  test_webui.py
skills/agent-config-sync/tests/fixtures/: macos.yaml  wsl.yaml
skills/codebase-analyzer/: README.md  SKILL.md
skills/execute-task/: SKILL.md
skills/finish-branch/: README.md  SKILL.md  metadata.yaml
skills/git-commit-push/: README.md  SKILL.md  metadata.yaml
skills/make-design/: README.md  SKILL.md  metadata.yaml
skills/refine-idea/: SKILL.md  metadata.yaml
skills/setup-worktree/: SKILL.md  metadata.yaml
skills/split-task/: SKILL.md  metadata.yaml
(+160 files in other folders)
