[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-config-sync"
version = "0.1.0"
description = "从声明式配置生成 Codex 与 Claude Code 用户配置"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
  "jsonschema>=4.0",
  "tomlkit>=0.13",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
aiconfig = "aiconfig.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

